testcases/negative/js_eval_safe.js
function calc() {
  eval("2 + 2");
}
